# rust-analyzer

crates/hir-def/src/: hir.rs  lang_item.rs
crates/hir-def/src/body/: lower.rs  pretty.rs
crates/hir-ty/: Cargo.toml
crates/hir-ty/src/: chalk_db.rs  db.rs  display.rs  infer.rs  layout.rs  method_resolution.rs  mir.rs
crates/hir-ty/src/infer/: closure.rs  expr.rs
crates/hir-ty/src/mir/: borrowck.rs  eval.rs
crates/hir/src/: lib.rs
crates/ide-db/src/: apply_change.rs  lib.rs
crates/test-utils/src/: minicore.rs
