[package]
name = "hir-ty"
version = "0.0.0"
description = "TBD"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
cov-mark = "2.0.0-pre.1"
itertools.workspace = true
arrayvec.workspace = true
bitflags.workspace = true
smallvec.workspace = true
ena = "0.14.0"
either.workspace = true
oorandom = "11.1.3"
tracing.workspace = true
rustc-hash.workspace = true
scoped-tls = "1.0.0"
chalk-solve = { git = "https://github.com/rust-lang/chalk.git", rev = "c9f0ad55395cd301be029734efdb7c4bcb05d324", default-features = false }
chalk-ir = { git = "https://github.com/rust-lang/chalk.git", rev = "c9f0ad55395cd301be029734efdb7c4bcb05d324" }
chalk-recursive = { git = "https://github.com/rust-lang/chalk.git", rev = "c9f0ad55395cd301be029734efdb7c4bcb05d324", default-features = false }
chalk-derive = { git = "https://github.com/rust-lang/chalk.git", rev = "c9f0ad55395cd301be029734efdb7c4bcb05d324" }
la-arena.workspace = true
once_cell = "1.17.0"
triomphe.workspace = true
nohash-hasher.workspace = true
typed-arena = "2.0.1"

rustc-dependencies.workspace = true

# local deps
stdx.workspace = true
intern.workspace = true
hir-def.workspace = true
hir-expand.workspace = true
base-db.workspace = true
profile.workspace = true
syntax.workspace = true
limit.workspace = true

[dev-dependencies]
expect-test = "1.4.0"
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-tree.workspace = true
project-model = { path = "../project-model" }

# local deps
test-utils.workspace = true
test-fixture.workspace = true

[features]
in-rust-tree = ["rustc-dependencies/in-rust-tree"]
